--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,14 @@
     width: 100%;
     margin: 0 auto;
 }
+.wrap {
+    max-width: 1150px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
 main {
     display: block;
     background-color: #ffffff;
@@ -15,14 +23,88 @@ main {
     padding: 0 20px;
 }
 
+h1 {
+    font-family: "Roboto Slab", sans-serif;
+}
+/* Header & Nav */
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 8%;
+    background-color: #ffffff;
+    width: 100%;
+    box-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+}
+.nav-bar a {
+    text-decoration: none;
+    font-family: "Roboto Slab", sans-serif;
+    color: #000000;
+    transition: color .1s ease-in-out;
+    margin: .25em .5em;
+    padding: .25em .5em;
+}
+.nav-bar a:hover {
+    color: dodgerblue;
+}
+#nav-nav-bar {
+    display: flex;
+    align-items: center;
+}
+.logo {
+    font-family: "Roboto Slab", sans-serif;
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 1.5em;
+    padding: .5em;
+    color: darkslategray;
+
+}
+
+/* Flex-Containers */
+
+.flex-container {
+    display: flex;
+    justify-content: center;
+}
+.flex-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.tag-line {
+    background-color: #f5f5f5;
+}
+
 /* Sections */
+.link-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #464646;
+    height: 2.5em;
+    width: 10em;
+    border-radius: .5em;
+    color: #ffffff;
+    text-decoration: none;
+    font-family: "Roboto Slab", sans-serif;
+    transition: background-color .2s ease-in-out;
+    transition-delay: initial;
+    margin-left: 1em;
+}
+.link-btn:hover {
+    background-color: #0074D9;
+}
 section.module:last-child {
     margin-bottom: 0;
 }
 section.module h2 {
-    margin-bottom: 40px;
-    font-family: "Roboto Slab", serif;
-    font-size: 30px;
+    margin-bottom: 1em;
+    margin-top: 1em;
+    font-family: "Roboto Slab", sans-serif;
+    font-size: 25px;
+    color: darkslategray;
+    text-transform: uppercase;
 }
 section.module p {
     margin-bottom: 40px;
@@ -33,7 +115,7 @@ section.module p:last-child {
     margin-bottom: 0;
 }
 section.module.content {
-    padding: 40px 0;
+    padding-bottom: 40px;
 }
 section.module.parallax {
     height: 600px;
@@ -58,6 +140,14 @@ section.module.parallax-1 {
     background-image: url("../img/1.jpg");
 }
 
+/* Articles */
+article {
+    max-width: 250px;
+    min-width: 250px;
+}
+
+
+/*Media Query*/
 @media all and (min-width: 600px) {
     section.module h2 {
         font-size: 42px;
