--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,9 +142,27 @@ section.module.parallax-1 {
 
 /* Articles */
 article {
-    max-width: 250px;
-    min-width: 250px;
+    max-width: 200px;
+    min-width: 200px;
+    height: 300px;
+    padding: 1em;
+    margin: 1em;
+    border: groove 5px lightgray;
 }
+
+#article-1 {
+    background: url("http://lorempixel.com/500/500/city") 50% 50% no-repeat;
+}
+#article-2 {
+    background: url("http://lorempixel.com/g/500/500/transport") 50% 50% no-repeat;
+}
+#article-3 {
+    background: url("http://lorempixel.com/500/500/fashion") 50% 50% no-repeat;
+}
+#article-4 {
+    background: url("http://lorempixel.com/500/500/people") 50% 50% no-repeat;
+}
+
 
 
 /*Media Query*/
