--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #464646;
+    background-color: #333333;
     height: 2.5em;
     width: 10em;
     border-radius: .5em;
@@ -102,7 +102,7 @@ section.module h2 {
     margin-bottom: 1em;
     margin-top: 1em;
     font-family: "Roboto Slab", sans-serif;
-    font-size: 25px;
+    font-size: 20px;
     color: darkslategray;
     text-transform: uppercase;
 }
@@ -192,11 +192,17 @@ article {
 
 /* Footer */
 
+footer {
+    display: flex;
+    justify-content: center;
+    background-color: #333333;
+    padding: 2em;
+}
 
 /*Media Query*/
 @media all and (min-width: 600px) {
     section.module h2 {
-        font-size: 42px;
+        font-size: 30px;
     }
     section.module p {
         font-size: 20px;
@@ -206,7 +212,9 @@ article {
     }
 }
 @media all and (min-width: 960px) {
-    section.module.parallax h1 {
-        font-size: 160px;
-    }
+    /*section.module.parallax h1 {*/
+        /*font-size: 160px;*/
+    /*}*/
+
+
 }
